<resources>

    <!-- Application -->
    <string name="app_name">Project Handler</string>
    <string name="app_package_name">com.eip.projecthandler</string>

    <!-- Login Activity -->
    <string name="logo_content_description">Project Handler Logo</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="log_in">Log In</string>

    <!-- Home Activity -->
    <string name="home">Home</string>
    <string name="log_out">Log out</string>
    <string name="projects">Projects</string>
    <string name="tickets">My tickets</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>

    <!-- button -->
    <string name="button_tasks">Tasks</string>
    <string name="button_my_tasks">My tasks</string>
    <string name="button_tickets">Tickets</string>
    <string name="button_my_tickets">My Tickets</string>
    <string name="button_create">Create</string>

    <!-- label -->
    <string name="label_progress">progress: </string>
    <string name="label_deadline">deadline: </string>
    <string name="label_dateBegin">Begin at: </string>
    <string name="label_dateEnd">End at: </string>
    <string name="label_days">days left</string>
    <string name="label_sub_tasks">Sub Tasks</string>
    <string name="label_take_task">take task</string>
    <string name="label_finished_task">finished task</string>
    <string name="label_priority">Priority:</string>
    <string name="label_tracker">Tracker:</string>
    <string name="label_title">Title:</string>
    <string name="label_project">Project:</string>
    <string name="label_users">Users:</string>
    <string name="label_message">Message:</string>
    <string name="label_new_task">Create New Ticket</string>

    <!-- text example -->
    <string name="name_example">Example name</string>
    <string name="description_example">Example description</string>
    <string name="date_example">01/09/2015</string>
    <string name="progress_example">33%</string>
    <string name="priority_example">priority</string>
    <string name="title_example">title</string>
    <string name="status_example">title</string>
    <string name="text_example">text</string>
    <string name="remaining_day_example">D-120</string>
    <string name="task_icon_description">icon for milestone or task</string>
    <string name="user_example">Jean Machin</string>

    <!-- Error -->
    <string name="save_error">An error occurred during the save on the server.</string>
</resources>
