<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/relativeLayout1"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_example"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/title"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_toLeftOf="@+id/priority"
            android:text="@string/title_example"
            android:maxLines="1"
            android:textStyle="bold"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/relativeLayout2"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_example"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/updatedAt"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_toLeftOf="@+id/status"
            android:text="@string/date_example"
            android:maxLines="1"
            android:textSize="16sp"/>
    </RelativeLayout>
</LinearLayout>