<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/relativeLayout1"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/date_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_example"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/name"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_toLeftOf="@+id/date_begin"
            android:text="@string/name_example"
            android:maxLines="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:ellipsize="end" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/relativeLayout2"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/day_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remaining_day_example"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/description"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_toLeftOf="@+id/day_left"
            android:text="@string/description_example"
            android:maxLines="1"
            android:textSize="16sp"
            android:ellipsize="end" />
    </RelativeLayout>

</LinearLayout>