<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingLeft="5dp"
              android:paddingRight="5dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/relativeLayout1"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >

        <TextView
            android:id="@+id/message"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:text="@string/description_example"
            android:textStyle="normal"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/relativeLayout2"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">



        <TextView
            android:id="@+id/autor"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_toLeftOf="@+id/updatedAt"
            android:text="@string/user_example"
            android:maxLines="1"
            android:textSize="10sp"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/updatedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_example"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:textSize="10sp"/>

    </RelativeLayout>
</LinearLayout>