<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_task_layout"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@color/carbon_ripple_light">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffe8e8e8"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name_example"
            android:id="@+id/tv_task_name"
            android:paddingBottom="10dp"
            android:background="#0071BC"
            android:gravity="center_horizontal"
            android:textColor="#ffffff"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/description_example"
            android:id="@+id/tv_task_description"
            android:layout_margin="5dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#ffe8e8e8"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_progress"
            android:id="@+id/tv_task_progress_label"
            android:layout_marginLeft="5dp"
            />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/progressBar_task_progress"
            android:max="100"
            android:progress="33"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#ffe8e8e8"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/subTaskLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_sub_tasks"
            android:id="@+id/textView"
            android:layout_margin="5dp"
            android:textColor="@android:color/black" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listView_subTasks"
            android:focusable="false"
            android:choiceMode="multipleChoice" />
    </LinearLayout>


</LinearLayout>