<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_project_layout"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@color/carbon_ripple_light">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffe8e8e8"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name_example"
            android:id="@+id/tv_project_name"
            android:paddingBottom="10dp"
            android:background="#0071BC"
            android:gravity="center_horizontal"
            android:textColor="#ffffff"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/description_example"
            android:id="@+id/tv_project_description"
            android:layout_margin="5dp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:background="#ffe8e8e8"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_dateBegin"
            android:id="@+id/tv_project_dateBegin_label"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/date_begin"
            android:text="@string/date_example"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="#ffe8e8e8"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_dateEnd"
            android:id="@+id/tv_project_dateEnd_label"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/date_end"
            android:text="@string/date_example"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="#ffe8e8e8"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_deadline"
            android:id="@+id/tv_project_deadline_label"
            android:layout_marginLeft="5dp" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/progressBar_project_deadline"
            android:max="100"
            android:progress="33"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:background="#ffe8e8e8"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_progress"
            android:id="@+id/tv_project_progress_label"
            android:layout_marginLeft="5dp" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/progressBar_project_progress"
            android:max="100"
            android:progress="33"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp" />
    </LinearLayout>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#ffe8e8e8">

        <Button
            android:id="@+id/tasks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Tâches"
            android:layout_marginLeft="5dp" />
        <!--style="?android:attr/borderlessButtonStyle"-->
        <Button
            android:id="@+id/my_tasks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Mes tâches"
            android:layout_marginRight="5dp" />

     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#ffe8e8e8">

        <Button
            android:id="@+id/tickets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Tickets"
            android:layout_marginLeft="5dp"
            />

        <Button
            android:id="@+id/my_tickets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Mes tickets"
            android:layout_marginRight="5dp" />
    </LinearLayout>

</LinearLayout>